--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -1,5 +1,5 @@
 
-user  nginx;
+user  root;
 worker_processes  auto;
 
 error_log  /var/log/nginx/error.log notice;
@@ -35,8 +35,8 @@ http {
         #access_log  /var/log/nginx/host.access.log  main;
 
         location / {
-            root   /usr/share/nginx/html;
-            index  index.html index.htm;
+            root   /home/huafeng/ChatStoreHub/frontend/src;  # change
+            index  login.html;
         }
 
         #error_page  404              /404.html;
@@ -45,7 +45,7 @@ http {
         #
         error_page   500 502 503 504  /50x.html;
         location = /50x.html {
-            root   /usr/share/nginx/html;
+            root   /home/huafeng/ChatStoreHub/frontend/src;  # change
         }
 
         # proxy the PHP scripts to Apache listening on 127.0.0.1:80
