--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -38,6 +38,14 @@ http {
             root   /home/huafeng/ChatStoreHub/frontend/src;  # change
             index  login.html;
         }
+        location /login {  # Match the form action URL
+            proxy_pass http://localhost:10000;  # Forward requests to your C program on port 8888
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+        }
 
         #error_page  404              /404.html;
 
