--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -13,13 +13,15 @@ events {
 
 http {
     include       /etc/nginx/mime.types;
-    default_type  application/octet-stream;
+    # default_type  application/octet-stream;
+    default_type  text/html;
 
     log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
                       '$status $body_bytes_sent "$http_referer" '
                       '"$http_user_agent" "$http_x_forwarded_for"';
 
     access_log  /var/log/nginx/access.log  main;
+    charset utf-8; 
 
     sendfile        on;
     #tcp_nopush     on;
@@ -38,8 +40,8 @@ http {
             root   /home/huafeng/ChatStoreHub/frontend/src;  # change
             index  login.html;
         }
-        location /login {  # Match the form action URL
-            proxy_pass http://localhost:10000;  # Forward requests to your C program on port 8888
+        location /login {
+            proxy_pass http://localhost:10000; 
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "upgrade";
