--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -1,4 +1,3 @@
-
 user  root;
 worker_processes  auto;
 
@@ -13,73 +12,35 @@ events {
 
 http {
     include       /etc/nginx/mime.types;
-    # default_type  application/octet-stream;
-    default_type  text/html;
-
+    default_type  application/octet-stream;
     log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
                       '$status $body_bytes_sent "$http_referer" '
                       '"$http_user_agent" "$http_x_forwarded_for"';
-
     access_log  /var/log/nginx/access.log  main;
     charset utf-8; 
-
     sendfile        on;
-    #tcp_nopush     on;
-
     keepalive_timeout  65;
-
-    #gzip  on;
 
     server {
         listen       80;
         server_name  localhost;
 
-        #access_log  /var/log/nginx/host.access.log  main;
-
         location / {
-            root   /home/huafeng/ChatStoreHub/frontend/src;  # change
+            root   /home/huafeng/ChatStoreHub/frontend/src;
             index  login.html;
         }
         location /login {
             proxy_pass http://localhost:10000; 
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection "upgrade";
-            proxy_set_header Host $host;
-            proxy_cache_bypass $http_upgrade;
+            # proxy_http_version 1.1;
+            # proxy_set_header Upgrade $http_upgrade;
+            # proxy_set_header Connection "upgrade";
+            # proxy_set_header Host $host;
+            # proxy_cache_bypass $http_upgrade;
         }
-
-        #error_page  404              /404.html;
-
-        # redirect server error pages to the static page /50x.html
-        #
         error_page   500 502 503 504  /50x.html;
         location = /50x.html {
-            root   /home/huafeng/ChatStoreHub/frontend/src;  # change
+            root   /home/huafeng/ChatStoreHub/frontend/src;
         }
-
-        # proxy the PHP scripts to Apache listening on 127.0.0.1:80
-        #
-        #location ~ \.php$ {
-        #    proxy_pass   http://127.0.0.1;
-        #}
-
-        # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
-        #
-        #location ~ \.php$ {
-        #    root           html;
-        #    fastcgi_pass   127.0.0.1:9000;
-        #    fastcgi_index  index.php;
-        #    fastcgi_param  SCRIPT_FILENAME  /scripts$fastcgi_script_name;
-        #    include        fastcgi_params;
-        #}
-
-        # deny access to .htaccess files, if Apache's document root
-        # concurs with nginx's one
-        #
-        #location ~ /\.ht {
-        #    deny  all;
-        #}
     }
 
 }
