--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -25,17 +25,17 @@ http {
         listen       80;
         server_name  localhost;
 
-        location / {
+        location /login.html {
             root   /home/huafeng/ChatStoreHub/frontend/src;
             index  login.html;
         }
         location /login {
             proxy_pass http://localhost:10000; 
-            # proxy_http_version 1.1;
-            # proxy_set_header Upgrade $http_upgrade;
-            # proxy_set_header Connection "upgrade";
-            # proxy_set_header Host $host;
-            # proxy_cache_bypass $http_upgrade;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
         }
         error_page   500 502 503 504  /50x.html;
         location = /50x.html {
