--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -29,8 +29,22 @@ http {
             root   /home/huafeng/ChatStoreHub/frontend/src;
             index  login.html;
         }
+        location /dialogue.html {
+            root /home/huafeng/ChatStoreHub/frontend/src;
+            index dialogue.html;
+        }
+
         location /login {
             proxy_pass http://localhost:10000; 
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+        }
+        # 处理 /dialogue 的请求并转发到 10001 端口的后端服务器
+        location /dialogue {
+            proxy_pass http://localhost:10001;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "upgrade";
