--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,8 @@
         "mysql.h": "c",
         "microhttpd.h": "c",
         "string.h": "c",
-        "stdio.h": "c"
+        "stdio.h": "c",
+        "csignal": "c",
+        "log.h": "c"
     }
 }
