Upload:install_ui.sh

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,5 +10,6 @@
         "stdio.h": "c",
         "csignal": "c",
         "log.h": "c"
-    }
+    },
+    "cmake.sourceDirectory": "/home/huafeng/ChatStoreHub/backend"
 }
